@@ -1,3 +1,4 @@
+// src/main/java/com/mentoria/agil/backend/controller/DisponibilidadeController.java
 package com.mentoria.agil.backend.controller;
 
 import com.mentoria.agil.backend.dto.DisponibilidadeRequestDTO;
@@ -10,12 +11,11 @@ import jakarta.persistence.EntityNotFoundException;
 import jakarta.validation.Valid;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
-import org.springframework.security.core.context.SecurityContextHolder;
-import org.springframework.security.core.userdetails.UserDetails;
+import org.springframework.security.access.prepost.PreAuthorize;
+import org.springframework.security.core.annotation.AuthenticationPrincipal;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api/disponibilidades")
@@ -24,30 +24,34 @@ public class DisponibilidadeController {
     private final DisponibilidadeServiceInterface disponibilidadeService;
     private final UserRepository userRepository;
 
-    public DisponibilidadeController(DisponibilidadeServiceInterface disponibilidadeService, UserRepository userRepository) {
+    public DisponibilidadeController(DisponibilidadeServiceInterface disponibilidadeService,
+            UserRepository userRepository) {
         this.disponibilidadeService = disponibilidadeService;
         this.userRepository = userRepository;
     }
 
     @PostMapping
-    public ResponseEntity<DisponibilidadeResponseDTO> cadastrar(@Valid @RequestBody DisponibilidadeRequestDTO dto) {
-        UserDetails userDetails = (UserDetails) SecurityContextHolder.getContext().getAuthentication().getPrincipal();
-        User mentor = (User) userDetails;
-
+    @PreAuthorize("hasAuthority('MENTOR')")
+    public ResponseEntity<DisponibilidadeResponseDTO> cadastrar(@AuthenticationPrincipal User mentor,
+            @Valid @RequestBody DisponibilidadeRequestDTO dto) {
         Disponibilidade disp = disponibilidadeService.cadastrar(mentor, dto);
-        DisponibilidadeResponseDTO response = new DisponibilidadeResponseDTO(disp);
-        return new ResponseEntity<>(response, HttpStatus.CREATED);
+        return new ResponseEntity<>(new DisponibilidadeResponseDTO(disp), HttpStatus.CREATED);
+    }
+
+    @GetMapping("/minhas")
+    @PreAuthorize("hasAuthority('MENTOR')")
+    public ResponseEntity<List<DisponibilidadeResponseDTO>> listarMinhas(@AuthenticationPrincipal User mentor) {
+        List<DisponibilidadeResponseDTO> response = disponibilidadeService.listarDisponibilidadesFuturas(mentor)
+                .stream().map(DisponibilidadeResponseDTO::new).toList();
+        return ResponseEntity.ok(response);
     }
 
     @GetMapping("/mentor/{mentorId}")
-    public ResponseEntity<List<DisponibilidadeResponseDTO>> listarDisponibilidades(@PathVariable Long mentorId) {
+    public ResponseEntity<List<DisponibilidadeResponseDTO>> listarPublicas(@PathVariable Long mentorId) {
         User mentor = userRepository.findById(mentorId)
                 .orElseThrow(() -> new EntityNotFoundException("Mentor não encontrado"));
-
-        List<Disponibilidade> disponibilidades = disponibilidadeService.listarDisponibilidadesFuturas(mentor);
-        List<DisponibilidadeResponseDTO> dtos = disponibilidades.stream()
-                .map(DisponibilidadeResponseDTO::new)
-                .collect(Collectors.toList());
-        return ResponseEntity.ok(dtos);
+        List<DisponibilidadeResponseDTO> response = disponibilidadeService.listarDisponibilidadesFuturas(mentor)
+                .stream().map(DisponibilidadeResponseDTO::new).toList();
+        return ResponseEntity.ok(response);
     }
 }
