@@ -2,39 +2,37 @@ package com.mentoria.agil.backend.service;
 
 import com.mentoria.agil.backend.interfaces.service.MaterialServiceInterface;
 import com.mentoria.agil.backend.dto.MaterialRequestDTO;
+import com.mentoria.agil.backend.enums.Role;
 import com.mentoria.agil.backend.exception.BusinessException;
 import com.mentoria.agil.backend.model.Material;
 import com.mentoria.agil.backend.model.MaterialMentorado;
 import com.mentoria.agil.backend.model.User;
-import com.mentoria.agil.backend.model.Role;
 import com.mentoria.agil.backend.repository.MaterialMentoradoRepository;
 import com.mentoria.agil.backend.repository.MaterialRepository;
 import com.mentoria.agil.backend.repository.UserRepository;
 
 import jakarta.persistence.EntityNotFoundException;
 import jakarta.transaction.Transactional;
-
-import java.util.stream.Collectors;
 import java.util.List;
-
+import java.util.Optional;
 import org.springframework.stereotype.Service;
 
 @Service
-public class MaterialService implements MaterialServiceInterface{
-    
+public class MaterialService implements MaterialServiceInterface {
+
     private final MaterialRepository materialRepository;
     private final UserRepository userRepository;
     private final MaterialMentoradoRepository materialMentoradoRepository;
 
-    public MaterialService (MaterialRepository materialRepository, UserRepository userRepository, MaterialMentoradoRepository materialMentoradoRepository){
+    public MaterialService(MaterialRepository materialRepository, UserRepository userRepository,
+            MaterialMentoradoRepository materialMentoradoRepository) {
         this.materialRepository = materialRepository;
         this.userRepository = userRepository;
         this.materialMentoradoRepository = materialMentoradoRepository;
     }
 
     @Transactional
-    public Material criarMaterial(User mentor, MaterialRequestDTO dto){
-
+    public Material criarMaterial(User mentor, MaterialRequestDTO dto) {
         Material material = new Material();
         material.setTitulo(dto.getTitulo());
         material.setDescricao(dto.getDescricao());
@@ -44,13 +42,11 @@ public class MaterialService implements MaterialServiceInterface{
 
         materialRepository.save(material);
 
-        // Associa, quando possível, o material aos mentorados passados no dto
-        if (dto.getMentoradosIds() != null && !dto.getMentoradosIds().isEmpty()) {
-
-            for (Long mentoradoId : dto.getMentoradosIds()) {
-
+        Optional.ofNullable(dto.getMentoradosIds()).ifPresent(ids -> {
+            for (Long mentoradoId : ids) {
                 User mentorado = userRepository.findById(mentoradoId)
-                        .orElseThrow(() -> new EntityNotFoundException("Mentorado não encontrado com ID: " + mentoradoId));
+                        .orElseThrow(
+                                () -> new EntityNotFoundException("Mentorado não encontrado com ID: " + mentoradoId));
 
                 if (mentorado.getRole() != Role.ESTUDANTE) {
                     throw new BusinessException("O usuário de ID " + mentoradoId + " não é um estudante");
@@ -60,20 +56,16 @@ public class MaterialService implements MaterialServiceInterface{
                     MaterialMentorado assoc = new MaterialMentorado(material, mentorado);
                     materialMentoradoRepository.save(assoc);
                 }
-
             }
+        });
 
-        }
-        
         return material;
-
     }
 
-    public List<Material> listarMateriaisPorMentorado(User mentorado){
+    public List<Material> listarMateriaisPorMentorado(User mentorado) {
         return materialMentoradoRepository.findByMentorado(mentorado)
                 .stream()
                 .map(MaterialMentorado::getMaterial)
-                .collect(Collectors.toList());
+                .toList();
     }
-
 }
